# advent-of-code-2024

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
day00/: CMakeLists.txt  main.cpp
day01/: main.cpp
day02/: main.cpp
day03/: main.cpp
day04/: main.cpp
day05/: main.cpp
day06/: main.cpp
day07/: main.cpp
day08/: main.cpp
day09/: main.cpp
day10/: CMakeLists.txt  main.cpp
day11/: main.cpp
day12/: main.cpp
day13/: main.cpp
day14/: main.cpp
day15/: main.cpp
day16/: main.cpp
day17/: main.cpp
day18/: main.cpp
day19/: main.cpp
day20/: main.cpp
